--- a/www/index.html
+++ b/www/index.html
@@ -8,9 +8,49 @@
     <link rel="stylesheet" href="components/loader.css">
     <link rel="stylesheet" href="css/style.css">
     <script>
+        var numero01, numero02, resultado
+
+        function somar() {
+        numero01 = parseInt(document.getElementById('numero01').value)
+        numero02 = parseInt(document.getElementById('numero02').value)
+
+        resultado = numero01 + numero02
+        document.getElementById('visor').innerHTML = resultado
+        }
+
+        function subtrair() {
+        numero01 = parseInt(document.getElementById('numero01').value)
+        numero02 = parseInt(document.getElementById('numero02').value)
+
+        resultado = numero01 - numero02
+        document.getElementById('visor').innerHTML = resultado
+        }
+
+        function multiplicar() {
+        numero01 = parseInt(document.getElementById('numero01').value)
+        numero02 = parseInt(document.getElementById('numero02').value)
+
+        resultado = numero01 * numero02
+        document.getElementById('visor').innerHTML = resultado
+        }
+
+        function dividir() {
+        numero01 = parseInt(document.getElementById('numero01').value)
+        numero02 = parseInt(document.getElementById('numero02').value)
+
+        resultado = numero01 / numero02
+        document.getElementById('visor').innerHTML = resultado
+        }
     </script>
 </head>
 <body>
-	<h1>Hello World!</h1>
+	<h1>Calculardora</h1>
+    <h3 id="visor"></h3>
+    <input type="number" placeholder="Insira o primeiro número" id="numero01">
+    <input type="number" placeholder="Insira o segundo número" id="numero02">
+    <input type="button" value="Somar" id="resultado" onclick="somar()">
+    <input type="button" value="Subtrair" id="resultado" onclick="subtrair()">
+    <input type="button" value="Multiplicar" id="resultado" onclick="multiplicar()">
+    <input type="button" value="Dividir" id="resultado" onclick="dividir()">
 </body>
 </html>
